--- a/Code/5_Analysis.Rmd
+++ b/Code/5_Analysis.Rmd
@@ -9,6 +9,7 @@ output: pdf_document
 knitr::opts_chunk$set(echo = TRUE)
 
 require(lubridate)
+require(dplyr)
 
 # ferry data
 #load("Data/Ferry/Clean/ferry_2018.RData")
@@ -51,6 +52,23 @@ save(mta_master2, file = "Data/Clean/mta_master.RData")
 ```{r}
 head(mta_master2)
 ```
+
+
+# Filter out holidays and weekends
+
+```{r}
+holidays <- c("2018-01-01","2018-01-15","2018-02-19","2018-05-28","2018-07-04")
+weekends <- c("2018-01-06","2018-01-07","2018-01-13","2018-01-14","2018-01-20","2018-01-21","2018-01-27","2018-01-28","2018-02-03","2018-02-04","2018-02-10","2018-02-11","2018-02-17","2018-02-18","2018-02-24","2018-02-25","2018-03-03","2018-03-04","2018-03-10","2018-03-11","2018-03-17","2018-03-18","2018-03-24","2018-03-25","2018-03-31","2018-04-01","2018-04-07","2018-04-08","2018-04-14","2018-04-15","2018-04-21","2018-04-22","2018-04-28","2018-04-29","2018-05-05","2018-05-06","2018-05-12","2018-05-13","2018-05-19","2018-05-20","2018-05-26","2018-05-27","2018-06-02","2018-06-03","2018-06-09","2018-06-10","2018-06-16","2018-06-17","2018-06-23","2018-06-24","2018-06-30","2018-07-01","2018-07-07","2018-07-08","2018-07-14","2018-07-15","2018-07-21","2018-07-22","2018-07-28","2018-07-29","2018-08-04","2018-08-05","2018-08-11","2018-08-12","2018-08-18","2018-08-19","2018-08-25","2018-08-26")
+# make time obects
+holidays <- parse_date_time(holidays,"%Y-%m-%d")
+weekends <- parse_date_time(weekends, "%Y-%m-%d")
+# combine
+holidays_weekends <- c(holidays,weekends)
+# Filter
+mta_sub <- filter(mta_master2, grepl(paste(holidays_weekends, collapse="|"), arrival_time))
+```
+
+
 
 # Get closest ferry and wait times
 
