--- a/Code/5_Analysis.Rmd
+++ b/Code/5_Analysis.Rmd
@@ -66,8 +66,22 @@ weekends <- parse_date_time(weekends, "%Y-%m-%d")
 holidays_weekends <- c(holidays,weekends)
 # Filter
 mta_sub <- filter(mta_master2, !grepl(paste(holidays_weekends, collapse="|"), arrival_time))
+
+# Remove the 12/31 data
+remove <- grep("2017-12-31", mta_sub$arrival_time)
+mta_sub <- mta_sub[-remove,]
 ```
 
+
+```{r}
+# Find the row we should look in 
+dist <- which((rownames(ferry_master) > mta_sub$arrival_time)==FALSE)
+
+ferry_row <- unlist(lapply(mta_sub$arrival_time, FUN = function(x) max(which((rownames(ferry_master) > x)==FALSE))))
+
+ferry_row <- lapply(mta_sub$arrival_time, FUN = function(x) max(which((rownames(ferry_master) > x)==FALSE)))
+# Getting Inf error -- TO BE FIXED
+```
 
 
 # Get closest ferry and wait times
