--- a/Code/6_Wait_Time_Analysis.Rmd
+++ b/Code/6_Wait_Time_Analysis.Rmd
@@ -8,8 +8,18 @@ output: github_document
 knitr::opts_chunk$set(echo = TRUE)
 require(lubridate)
 require(dplyr)
-load("./Data/Clean/analysis_data.RData")
+load("../Data/Clean/analysis_data.RData")
 ```
+
+# Research Questions
+
+Here are the research questions I hope to answer:
+
+1) What does the distribution of lateness look like for connections between the 1 train and the Staten Island Ferry?
+
+2) How does this distribution vary across time (e.g., rush hour vs tourist peak)?
+
+3) How does this distribution vary for people who can run versus people who can't run from the 1 train to the ferry?
 
 # Initial Visualizations
 
@@ -17,7 +27,7 @@ load("./Data/Clean/analysis_data.RData")
 
 ```{r density}
 # overlay plot
-plot(density(analysis_data$wait_times_1min), main = "Wait times with 1,2, and 3 minutes exit time", col = 2)
+plot(density(analysis_data$wait_times_1min), main = "Wait times with 1, 2, and 3 minutes exit time", col = 2)
 lines(density(analysis_data$wait_times_2min), col = 4)
 lines(density(analysis_data$wait_times_3min), col = 5)
 legend("topright",legend = c("1 min","2 min","3 min"), lty = 1, lwd = 2, col = c(2,4,5))
@@ -25,13 +35,30 @@ legend("topright",legend = c("1 min","2 min","3 min"), lty = 1, lwd = 2, col = c
 
 The three distributions look quite similar. In terms of the simulations I ran, these distributions look like the beta distribution results. 
 
-## Time x Wait times
+## Time (hour) x Wait times
 
 ```{r time by wait times}
-plot(analysis_data$hour, analysis_data$wait_times_1min, main = "Wait times",xlab = "Hour of day",ylab = "Wait time (1 min exit time)")
+plot(analysis_data$hour, analysis_data$wait_times_1min, main = "Wait times  (1 min exit time)",xlab = "Hour of day",ylab = "Wait time")
+plot(analysis_data$hour, analysis_data$wait_times_2min, main = "Wait times  (2 min exit time)",xlab = "Hour of day",ylab = "Wait time")
+plot(analysis_data$hour, analysis_data$wait_times_3min, main = "Wait times (3 min exit time)",xlab = "Hour of day",ylab = "Wait time")
 ```
 
-# Test the difference between the distributions
+It makes sense that the waits pile up late at night and during the tourist peak hours (10-3). I'm curious seeing that the very lengthy wait times caused by a missing ferry are so dispersed. I initially thought that it would be worse in the wee hours of the morning, but it looks to be a problem throughout the day. This isn't concerning in terms of something being wrong with the data because there are many reasons why a ferry or a train never shows. Both can break down, both can have sick passengers, and both can barely miss each other. 
+
+## Time (weekday) x Wait times
+
+Now I'll check the wait times by weekday. 
+
+```{r weekday by wait}
+plot(analysis_data$weekday, analysis_data$wait_times_1min, main = "Wait times (1 min exit time)",xlab = "Hour of day",ylab = "Wait time")
+plot(analysis_data$weekday, analysis_data$wait_times_2min, main = "Wait times (2 min exit time)",xlab = "Hour of day",ylab = "Wait time")
+plot(analysis_data$weekday, analysis_data$wait_times_3min, main = "Wait times (3 min exit time)",xlab = "Hour of day",ylab = "Wait time")
+
+```
+
+I'm curious as to why the distributions for Tuesday and Thursday seem more spread and have slightly higher medians than Monday, Wednesday, and Friday. Once again, we see that the long delays seem to be evenly distributed across days of the week. I'd like to test if these distrbutions are different from each other later on. 
+
+# Test the difference between the wait distributions
 
 I will use the two-sample Kolmogorov-Smirnov test to determine whether each distribution is different from the other two. I will adjust my p-values to reflect the multiple tests. 
 
